modified:   assets/css/n.css 	new file:   assets/img/other/logo_new.png 	modified:   assets/js/hearder_anim.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a class="nav_link modal_trigger" href="#modal">Login</a>
         </nav>
         <div class="header2" id="sec-home" style="margin-top: 0;">
-            <h1>  <img src="assets/img/other/logo.png" alt="Mountain View" style="width:150px;height:150px;" ><span class="element">Shop Clients</span> </h1>
+            <h1>  <img src="assets/img/other/logo_new.png" alt="Mountain View" style="width:150px;height:150px;" ><span class="element">Shop Clients</span> </h1>
             <p class="kicker" id="ki">Shop Your Clients Online
                 <br>
                 <br>
@@ -96,9 +96,7 @@
                 from Businesses. As a result, we have a <strong>95%
                 conversion rate</strong> till date.
                 <br>
-                <br> Our partnership has helped our Business partners to save up to <strong>60%</strong> of funds spent on business development/sales teams in Bengaluru. Our aim is to help Businessesto grow at <strong>2x-3x</strong> speed by spending up to
-                65%-70% less on their business development/sales needs, which is a fixed recurring savings month on month.
-                <br>
+                <br> Our partnership has helped our Business partners to save up to <strong>65%-70%</strong> of funds spent on business development/sales teams in Bengaluru. Our aim is to help Businesses to grow at <strong>2x-3x speed</strong> by spending up to 65%-70% less on their business development/sales needs, which is a fixed recurring savings month on month. <br>
                 <br> <a href="#sec-register">Register with us</a> or <a href="#sec-contact">Contact us</a> to know more
             </p>
         </div>
@@ -338,7 +336,7 @@
     <div class="line-separator"></div>
 
     <!-- Start of How it works -->
-    <section id="sec-current_projects" class="section-services">
+    <section id="sec-current_projects" class="section-current_projects">
         <!-- Section Heading  -->
         <h3 id="services">Current Projects</h3>
         <div class="face-lockup">
@@ -350,20 +348,144 @@
         </div>
         <div class="blurbleft">
             <p class="leftp">ShopClients is a 360 degree business development partner for businesses and currently offering offline/online business development and sales support services to companies under below listed sectors/industries.</p>
-
-            <div class="ol_container">
-                <ol type="1" class="hilightNumbers">
-                    <li> <a href="#sec-register">Register with us </a>for free or wite to <a href="mailto:contact@shopclients.com">contact@shopclients.com</a></li>
-                    <li>Share a brief note about your Business offerings </li>
-                    <li>Share your needs with us and a brief note about what kind of Clients you are looking for (nature of business in terms of scale, location, etc).</li>
-                    <li>Sit back and relax!</li>
-                    <li><a class="modal_trigger" href="#modal">Log on</a> to your ShopClients account after week’s time and you’ll have what you were looking for!</li>
-                    <li>On board and start working with your desired Clients!</li>
-                </ol>
-            </div>
-
-
         </div>
+        <!-- Current Project 1 -->
+        <p class="question"><a class="qtag">1. </a>Schools and Colleges</p>
+        <div class="answer">
+            <a class="qtag"> ShopClients is helping Schools and Colleges in providing below services.</a>
+            <ul class="important" type="1">
+                <li>Uniforms and formal Shoes</li>
+                <li>Sports dress and multi-branded Sports Shoes</li>
+                <li>Belts and tie</li>
+                <li>Standard and customized Bags (with or without logo)</li>
+                <li>Standard and customized Lunch box and Bags (with or without logo)</li>
+                <li>All stationary items</li>
+                <li>Education and Training:</li>
+                <ul>
+                    <li>Robotics lab set up and training</li>
+                    <li>Training on space and science</li>
+                    <li>Soft skills, qualitative and quantitative training programs</li>
+                    <li>Support to swimming, singing, dance and other curricular activities</li>
+                </ul>
+                <li>Tours and travels (trip advisory services)</li>
+                <li>Entrepreneurship, advisory and investor connect services</li>
+                <li>Accounting, audit and ERP solutions</li>
+                <li>Internships and placement services, etc all under one roof!</li>
+            </ul>
+            <br><span class="generalText">Write to us on <a class="midlink" href="mailto:contact@shopclients.com">contact@shopclients.com</a> or call us on +91-9844266269 for more details!</span>
+        </div>
+        <!-- End of Current Project 1 -->
+
+        <!-- Current Project 2 -->
+        <p class="question"><a class="qtag">2.</a>Real Estate</p>
+        <div class="answer">
+            <a class="qtag">ShopClients works with leading partners that are into real estate and management companies and offer below listed services.</a>
+            <ul class="important" type="1">
+                <li>Tenancy Management
+                    <li>Government liaison work</li>
+                    <li>Property advisory services</li>
+                    <li>Property maintenance services</li>
+                    <li>Interior designing</li>
+                    <li>Property buy and sell: primary and secondary properties</li>
+                    <li><span class="important">Financing support:</span> for all kinds of real estate properties and needs (Fresh Home loan, loans against building under construction, new building, existing building, loan transfers to reduce interest rates,
+                        mortgaging and loans against land/empty sites, etc).</li>
+            </ul>
+            <br><span class="generalText">Write to us on <a class="midlink" href="mailto:contact@shopclients.com">contact@shopclients.com</a> or call us on +91-9844266269 for more details!</span>
+        </div>
+        <!-- End of Current Project 2 -->
+
+
+        <!-- Current Project 3 -->
+        <p class="question"><a class="qtag">3.</a>Banking services</p>
+        <div class="answer">
+            <a class="qtag">ShopClients offers right and suitable banking solutions to retail and corporate clients as below.</a>
+            <ul class="important" type="1">
+                <li>Personal loans</li>
+                <li>Education loans</li>
+                <li>Vehicle loans</li>
+                <li>Business loans</li>
+                <li>Letter of credit</li>
+                <li>Working capital loans</li>
+                <li>Hope loans and transfers</li>
+                <li>Savings and Current account opening services, etc all under one roof!</li>
+
+            </ul>
+            <br><span class="generalText">Write to us on <a class="midlink" href="mailto:contact@shopclients.com">contact@shopclients.com</a> or call us on +91-9844266269 for more details!</span>
+        </div>
+        <!-- End of Current Project 3 -->
+
+
+        <!-- Current Project 4 -->
+        <p class="question"><a class="qtag">4.</a>Automobiles</p>
+        <div class="answer">
+            <a class="qtag">ShopClients helps companies that are into Automobiles industry in serving below needs.</a>
+            <ul class="important" type="1">
+                <li>Bike and Car rental services</li>
+                <li>Bike and car service services through an service center aggregation model</li>
+                <li>Insurance and loans services</li>
+                <li>Luxury Cars buy/sell services</li>
+                <li>Customer engagement and communication services</li>
+                <li>Buy/sell services, all under one roof!</li>
+
+            </ul>
+            <br><span class="generalText">Write to us on <a class="midlink" href="mailto:contact@shopclients.com">contact@shopclients.com</a> or call us on +91-9844266269 for more details!</span>
+        </div>
+        <!-- End of Current Project 4 -->
+
+
+        <!-- Current Project 5 -->
+        <p class="question"><a class="qtag">5.</a>Technology services</p>
+        <div class="answer">
+            <a class="qtag">ShopClients helps companies that are looking for technology partners in identifying and connecting them to a suitable one for below needs.</a>
+            <ul class="important" type="1">
+                <li>Website development</li>
+                <li>Android or IOS app development services</li>
+                <li>Customized and standard ERP Solutions</li>
+                <li>Gaming and Gamifying business solutions</li>
+                <li>Technology recruitment and training services</li>
+                <li>App/system/user testing solutions, etc all under one roof!</li>
+
+            </ul>
+            <br><span class="generalText">Write to us on <a class="midlink" href="mailto:contact@shopclients.com">contact@shopclients.com</a> or call us on +91-9844266269 for more details!</span>
+        </div>
+        <!-- End of Current Project 5 -->
+
+
+        <!-- Current Project 6 -->
+        <p class="question"><a class="qtag">6.</a>Logistics services</p>
+        <div class="answer">
+            <a class="qtag">ShopClients helps companies that are looking for logistics partners in identifying and connecting them to a suitable one for below needs.</a>
+            <ul class="important" type="1">
+                <li>Intra-city/ hyper local on demand and scheduled delivery services</li>
+                <li>Intra-city on demand and scheduled delivery services</li>
+                <li>Intra and inter-city trucks aggregator services</li>
+                <li>Road, railways, air and cross border delivery services, etc all under one roof!</li>
+
+            </ul>
+            <br><span class="generalText">Write to us on <a class="midlink" href="mailto:contact@shopclients.com">contact@shopclients.com</a> or call us on +91-9844266269 for more details!</span>
+        </div>
+        <!-- End of Current Project 6 -->
+
+
+        <!-- Current Project 7 -->
+        <p class="question"><a class="qtag">7.</a>Other Business Solutions</p>
+        <div class="answer">
+            <a class="qtag">ShopClients does offer a lot to retail and corporate clients apart from the above listed services as mentioned below.</a>
+            <ul class="important" type="1">
+                <li>HRMS Software</li>
+                <li>Technology driven Rewards, recognition and gifting services</li>
+                <li>Printing and stationary services</li>
+                <li>Fashion and lifestyle</li>
+                <li>Industry buying: electrical and electronic items distribution and supply</li>
+                <li>Organic and Inorganic Grocery, vegetables and fruits on demand delivery services</li>
+                <li>Entry/executive Recruitment, training and legal services</li>
+                <li>Investments and advisory services, etc to name a few</li>
+
+            </ul>
+            <br><span class="generalText">Write to us on <a class="midlink" href="mailto:contact@shopclients.com">contact@shopclients.com</a> or call us on +91-9844266269 for more details!</span>
+        </div>
+        <!-- End of Current Project 7 -->
+
     </section>
     <!-- End of how it works -->
 
@@ -582,7 +704,7 @@
                     <a class="footer_link" href="#sec-faq">FAQ's</a>
                     <a class="footer_link" href="#sec-careers">Careers (we’re hiring)</a>
                 </nav>
-                <p class="copyright">&copy; 2017 Dhananjaya S and website developed by Gaurav Badarkhe.</p>
+                <p class="copyright">&copy;2017. All rights reserved by ShopClients</p>
             </div>
         </div>
     </footer>
