changes the text and some minor changes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
         <div class="header2" id="sec-home" style="margin-top: 0;">
             <h1>  <img src="assets/img/other/logo_new.png" alt="Mountain View" style="width:150px;height:150px;" ><span class="element">Shop Clients</span> </h1>
-            <p class="kicker" id="ki">Shop Your Clients Online
+            <p class="kicker" id="ki">Your One Stop Business Development Partner
                 <br>
                 <br>
                 <br><span style="color:white;">Convenient, Timely and Cost effective Business Development Solutions<span></p>
