Added some content edits in the home page

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                         </div>
 
                         <div class="text">
-                            <p class="generalText">We at ShopClients, strongly believe in <strong>“You Grow, We Grow”</strong> approach and we aren’t tired in the process of hunting Clients for our Businesses yet!
+                            <p class="generalText">We at ShopClients, strongly believe in <strong>“You Grow, We Grow”</strong> approach and we aren’t tired in the process of hunting Clients for our partner Businesses yet!
                                 <br> So, we go that extra mile required to promote your offerings/brand in the market through various promotional events to create awareness and to gain better visibility!
                                 <br>
                                 <a href="#sec-register">Register with us</a> or <a href="#sec-contact">Contact us</a> to know more.</p>
@@ -457,7 +457,7 @@
             <a class="qtag">ShopClients helps companies that are looking for logistics partners in identifying and connecting them to a suitable one for below needs.</a>
             <ul class="important" type="1">
                 <li>Intra-city/ hyper local on demand and scheduled delivery services</li>
-                <li>Intra-city on demand and scheduled delivery services</li>
+                <li>Inter-city on demand and scheduled delivery services</li>
                 <li>Intra and inter-city trucks aggregator services</li>
                 <li>Road, railways, air and cross border delivery services, etc all under one roof!</li>
 
