Made some content changes.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <p class="generalText">Go as an <strong>Asset light Business development model</strong> by virtually outsourcing your business development needs to us.</p>
                         </li>
                         <li>
-                            <p class="generalText">Save upto <strong>60%</strong> from your new business development cost and grow at <strong>2x-3x</strong> speed by focusing more on your core business offerings at the same cost.</p>
+                            <p class="generalText">Save upto <strong>65%-70%</strong> from your new business development cost and grow at <strong>2x-3x</strong> speed by focusing more on your core business offerings at the same cost.</p>
                         </li>
                         <li>
                             <p class="generalText">Get introduced to our partner Businesses to <strong>grow your clientele network</strong> at free of cost on our platform when you are in need of any other Businesses services.</p>
