--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
                 from Businesses. As a result, we have a <strong>95%
                 conversion rate</strong> till date.
                 <br>
-                <br> Our partnership has helped our Business partners to save up to <strong>65%-70%</strong> of funds spent on business development/sales teams in Bengaluru. Our aim is to help Businesses to grow at <strong>2x-3x speed</strong> by spending up to 65%-70% less on their business development/sales needs, which is a fixed recurring savings month on month. <br>
+                <br> Our partnership has helped our Business partners to save up to <strong>65%-70%</strong> of funds spent on business development/sales teams in Bengaluru. Our aim is to help Businesses to grow at <strong>2x-3x speed</strong> by spending
+                up to 65%-70% less on their business development/sales needs, which is a fixed recurring savings month on month.
+                <br>
                 <br> <a href="#sec-register">Register with us</a> or <a href="#sec-contact">Contact us</a> to know more
             </p>
         </div>
@@ -729,6 +731,23 @@
             var s = document.getElementsByTagName('script')[0];
             s.parentNode.insertBefore(po, s);
         })();
+    </script>
+
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-90999162-1', 'auto');
+        ga('send', 'pageview');
     </script>
 
 </body>
